# py-giskit

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_BAG3D.md  CHANGELOG.md  CONTRIBUTING.md  CRS_HANDLING.md  DATA_SOURCES_RESEARCH.md  Dockerfile.export  LICENSE  MANIFEST.in  PDOK_SERVICES_OVERVIEW.md  PLAN.md  PLAN_IFC_EXPORT.md  PYPI_PUBLISH.md  PYPI_READY.md  README.md  RELEASE_NOTES_v0.1.0.md  TEST_SUMMARY.md  pyproject.toml  test_transform_validation.py
.github/: README.md
.github/workflows/: publish-pypi.yml  tests.yml
config/: ARCHITECTURE.md  README.md
docs/: EXTERNAL_SERVICES.md  EXTERNAL_SERVICES_FEASIBILITY.md  KLIMAATADAPTATIE_SOURCES.md  KLIMAATEFFECTATLAS_INTEGRATION.md  PDOK_SERVICES.md  PDOK_SERVICES_OVERVIEW.md  README.md  TREE_HEIGHT_EXTRACTION.md
docs/publishing/: GITHUB_PYPI_SETUP.md  PYPI_PUBLISH.md
examples/: README.md  all_providers_template.json  build_site_underlegger.sh  catalog_demo.py  export_pipeline.py  site_underlegger.json
giskit/: __init__.py  catalog.py
giskit/cli/: main.py
giskit/cli/commands/: __init__.py  export.py  providers.py  quirks.py  run.py
giskit/config/: README.md  __init__.py  discovery.py  loader.py
giskit/config/export/: colors.yml  layer_mappings.yml
giskit/config/providers/: bag3d.yml  duo.yml  klimaateffectatlas.yml  ndov.yml  pdok.yml
giskit/config/quirks/: formats.yml  providers.yml  services.yml
giskit/config/services/: README.md  pdok-wcs.yml  pdok-wmts.yml  pdok.yml  test-wms.yml  testprovider.yml
giskit/core/: geocoding.py  recipe.py  spatial.py
giskit/exporters/: __init__.py  glb_exporter.py  obj_zip_exporter.py
giskit/exporters/ifc/: __init__.py  exporter.py  geometry.py  layer_exporter.py  materials.py  schema_adapter.py
giskit/indexer/: README.md  __init__.py  __main__.py  monitor.py
giskit/protocols/: __init__.py  base.py  cityjson.py  csv.py  gtfs.py  ogc_features.py  quirks.py  quirks_monitor.py  wcs.py  wfs.py  wmts.py
giskit/providers/: base.py  gtfs.py  multi_protocol.py  ogc_features.py  pdok.py  wcs.py  wmts.py
notes/: BAG3D_ARCHITECTURE.md  CRS_HANDLING.md  DOCKER_EXPORT.md  EXPORT_GUIDE.md  GRID_WALKING_VERIFICATION.md  QUIRKS_SYSTEM.md  README.md
recipes/: README.md  amsterdam_dam_square.json  amsterdam_klimaat_check.json  amsterdam_monumenten.json  amsterdam_scholen.json  bbox_simple.json  curieweg_bgt_complete.json  curieweg_cbs_statistics.json  curieweg_environment.json  curieweg_infrastructure.json  curieweg_multi_service.json  curieweg_topography.json  ov_haltes_amsterdam.json  point_with_radius.json  site_underlegger_bag3d_only.json  sitedb_curieweg.json  woningbouw_klimaat_risico_analyse.json
tests/integration/: test_bag3d_cityjson.py  test_grid_walking_transforms.py  test_klimaateffectatlas.py  test_obj_zip_exporter.py  test_sitedb_use_case.py
tests/unit/: test_catalog.py  test_cli_quirks.py  test_quirks.py  test_quirks_monitor.py  test_recipe.py
